Added download list

--- a/src/route/error/templates/server.pug
+++ b/src/route/error/templates/server.pug
@@ -12,10 +12,10 @@ html
         .error__header.error__header_server-error.font-effect-3d MISIS&nbsp;&nbsp;&nbsp;BOOKS
         .error__message= message
         a.error__action(href='/')
-          span Home
+          span Главная
         br
         a.error__action(target='_blank', href=mailToUrl)
-          span Contact&nbsp;Administrator
+          span Связаться&nbsp;с&nbsp;Администрацией
 
         div(style='text-align: left; margin-top: 60px; color: rgba(255,255,255,.7)')
           pre= stack
